--- a/frontend/src/css/MainPage.css
+++ b/frontend/src/css/MainPage.css
@@ -1,9 +1,62 @@
-/* 메인 페이지 스타일 */
+/* 전체 컨텐츠 중앙 정렬 */
 .main-content {
-    flex: 1;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: #f9f9f9;
-  }
-  
+  width: 100vw;
+  text-align: center;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column; /* 요소들을 세로 정렬 */
+  align-items: center;
+  font-family: "NanumSquare";
+  min-height: 100vh; /* 화면 높이 유지 */
+  justify-content: flex-start; /* 👈 푸터가 아래쪽으로 고정되지 않도록 수정 */
+}
+
+
+.banner {
+  width: 100vw;
+  height: 40vh; /* 높이 조절 가능 */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+}
+
+.banner img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+/* 텍스트 컨테이너 */
+.text-container {
+  width: 100%;
+  text-align: center;
+  margin-top: 20px; /* 배너와의 간격 조절 */
+}
+
+/* 텍스트 디자인 */
+.highlight-text {
+  font-size: 50px;
+  font-weight: bold;
+}
+
+.blue-text {
+  color: #3a82f6; /* 파란색 */
+}
+
+.description {
+  font-size: 25px;
+  color: #666;
+}
+
+
+.background-gray-container {
+  background-color: #f2f6fd;
+  width: 100%;
+}
+
+.student-registration-image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
